# file-creation

./: basic2.py  db.sqlite3  pyproject.toml  urls.py
file_allocation/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
file_allocation/static/js/: mobiscroll.javascript.min.js  test.js
file_allocation/templates/: filter_data.html  home-complex.html  home-simple.html
mysite/: settings.py  urls.py
