[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Vandita-iA <vandita.asudani@infoanalytica.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
Django = "^5.0.4"
pandas = "^2.2.2"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
